css/main.css
body{
	height: 100%;
	width:100%;
	background: url("../bg.jpg") no-repeat center center fixed; 
	-webkit-background-size: cover;
	-moz-background-size: cover;
	-o-background-size: cover;
	background-size: cover;

}
html{	overflow:hidden;}
#title
{
	position: relative;
	top:35%;
	font-size:50px;
	text-align:center;
	font-family: 'Josefin Sans';
	color:white;
	letter-spacing: 3px;	
}

#subtitle
{
	position: relative;
	top:35%;
	font-size:30px;
	text-align:center;
	font-family: 'Josefin Sans';
	color:white;
}


#subfbinfo{
	position: relative;
	text-align:center;
	top:45%;
}

#subfbinfo1	{
	position: relative;
	display: block;
	margin:0 auto;
	text-align:center !important;
	top:40%;
}

.button {
   background-color: Transparent;
    background-repeat:no-repeat;
    border: 2px 0px white;
    font-family: 'Josefin Sans';
    font-size:20px;	
    color:white;
}

